<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Gastgeber"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:text="@string/host"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/host"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:paddingLeft="10dp"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Ort"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:text="@string/location"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:paddingLeft="10dp"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Termin"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:text="@string/appointment"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/gameEveningDate"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_weight="1"
            android:text="" />

    </LinearLayout>

</LinearLayout>