<!-- This is the representation of the game evening in the list view -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_rectangle">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Gastgeber"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/host"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/host"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:paddingLeft="5dp"
            android:text="@string/host" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Ort"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:paddingTop="5dp"
            android:text="@string/location"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:text="@string/location" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Termin"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:text="@string/appointment"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/gameEveningDate"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_weight="1"
            android:text="@string/appointment" />

    </LinearLayout>

    <TextView
        android:id="@+id/forwad_icon"
        android:layout_width="300dp"
        android:layout_height="96dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text=">"
        android:textSize="24sp" />

</LinearLayout>